fix rent calc typesize on mobile v desktop

--- a/src/Components/Pages/RentCalculator/RentCalculator.scss
+++ b/src/Components/Pages/RentCalculator/RentCalculator.scss
@@ -21,12 +21,14 @@
     .rent-increase-explanation {
       width: 90%;
       @include body_large_desktop;
+      font-weight: 500;
       @include for-phone-only {
         @include body_large_mobile;
         font-weight: 500;
       }
       .jfcl-link {
         @include body_large_desktop;
+        font-weight: 500;
         svg {
           display: none; // hide internal link arrow icon
         }
@@ -117,10 +119,13 @@
 
     .rent-increase-header {
       margin: unset;
+      @include body_standard_desktop;
+      font-weight: 500;
     }
     .rent-increase-result {
       margin: unset;
       @include body_large_desktop;
+      font-weight: 500;
     }
     .rent-increase-formula {
       margin-right: 0.375rem; //6px;
